--- a/style.css
+++ b/style.css
@@ -8,6 +8,27 @@
 	     text-align: center;
 	 }
 	 
+   #sliders{
+       padding: 30px 0px;
+	     height: 100px;
+	     width: 300px;
+	     margin: auto;
+	     font-weight: 700;
+	     text-align: center;
+   }
+
+   input[type='range']{
+       height: 50px;
+	     width: 300px;
+   }
+
+   .label{
+	     margin: auto;
+	     color: rgba(142, 0, 0, 0.775);
+	     font-weight: 700;
+	     text-align: center;
+   }
+
 	 #charged{
 	     padding: 30px 0px;
 	     font-size: 5em;
