--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
-	 #batt{
-	     padding: 30px 0px;
-	     height: 100px;
-	     width: 300px;
-	     margin: auto;
-	     color: white;
-	     font-weight: 700;
-	     text-align: center;
-	     border-radius: 20px;
-	 }
-	 
+
+  #batt{
+        padding: 30px 0px;
+        height: 100px;
+        width: 300px;
+        margin: auto;
+        color: white;
+        font-weight: 700;
+        position: relative;
+        text-align: center;
+        border-radius: 20px;
+        border: 1px solid black;
+        background-color: white;
+  }
+
 	 #charged{
-	     font-size: 5em;
-	 }
+      -webkit-text-fill-color: white;
+      -webkit-text-stroke-width: 0.5px;
+      -webkit-text-stroke-color: black;
+      font-size: 5em;
+      z-index:1;
+      position:relative;
+    }
 	 
 	 #time_left{
-	     padding: 10px 0px;
-	     font-size: 1em;
-	 }
+      -webkit-text-fill-color: white;
+      -webkit-text-stroke-width: 0.5px;
+      -webkit-text-stroke-color: black;
+      z-index:1;
+      position:relative;
+      font-family: Arial, Helvetica, sans-serif;
+      padding: 10px 0px;
+      font-size: 1em;
+    }
 
 	 
    #sliders{
