--- a/style.css
+++ b/style.css
@@ -11,23 +11,22 @@
         border-radius: 20px;
         border: 1px solid black;
         background-color: white;
+        overflow: hidden;
+  }
+
+  #batt > div {
+      -webkit-text-fill-color: white;
+      -webkit-text-stroke-width: 0.5px;
+      -webkit-text-stroke-color: black;
+      z-index:1;
+      position:relative;
   }
 
 	 #charged{
-      -webkit-text-fill-color: white;
-      -webkit-text-stroke-width: 0.5px;
-      -webkit-text-stroke-color: black;
       font-size: 5em;
-      z-index:1;
-      position:relative;
     }
 	 
 	 #time_left{
-      -webkit-text-fill-color: white;
-      -webkit-text-stroke-width: 0.5px;
-      -webkit-text-stroke-color: black;
-      z-index:1;
-      position:relative;
       font-family: Arial, Helvetica, sans-serif;
       padding: 10px 0px;
       font-size: 1em;
@@ -54,4 +53,23 @@
 	     font-weight: 700;
 	     text-align: center;
    }
+
+   details{
+    cursor: pointer;
+   }
+
+   table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      /* width: 100%; */
+    }
+
+
+    td, th {
+      border: 1px solid black;
+      text-align: center;
+      padding: 8px;
+      width: 100px;
+    }
+
 
