--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
   #batt{
         padding: 30px 0px;
         height: 100px;
@@ -72,4 +71,16 @@
       width: 100px;
     }
 
+	 </style>
 
+  <style id="present-fill">
+  #batt::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+  }
+	
